# rutris

./: Cargo.toml  LICENSE  README.md
rutris-api/: Cargo.toml
rutris-gui/: Cargo.toml
rutris-tui/: Cargo.toml
rutris-tui/src/: main.rs
scripts/: workflow
src/: main.rs
