[package]
name = "rutris-api"
version = "0.1.0"
authors = ["4lineclear <tamimhakimi21@gmail.com>"]
edition = "2021"

license = "MIT"
description = "The API implementation of rutris"
homepage = "https://github.com/4lineclear/rutris/tree/main"
repository = "https://github.com/4lineclear/rutris/tree/main"
readme = "../README.md"
keywords = ["api"]
categories = ["Games"]

[dependencies]
